# linear-programming

./: .gitlab-ci.yml  .travis.yml  LinearProgramming.cabal  LinearProgramming.sublime-project  README.md  Setup.hs  TODO.md  cddl.txt  generate_test_report.bat  setup.bat
LinearProgramming/: Latex.hs  Matrix.lhs  Parser.hs  Problem.hs  Tableau.hs  Tableau.lhs
Tests/: TestMatrix.hs  Tests.hs  TestsAuxiliaryTableau.hs  TestsCompleteExample.hs  TestsLatex.hs  TestsMathML.hs  TestsParser.hs  TestsProblem.hs  TestsSimplex.hs  TestsTableau.hs  TestsVariables.hs
hSimplex/: Main.hs  Main.lhs
input/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt
src/LinearProgramming/: AuxiliaryTableau.hs  Latex.hs  MathML.hs  Parser.hs  Problem.hs  Simplex.hs  Tableau.hs
